--- a/src/css/responsivo.css
+++ b/src/css/responsivo.css
@@ -1,6 +1,21 @@
 @media (max-width: 750px) {
+
+    #pokedex-logo img{
+        height: 100px;
+        margin-top: 10px;
+        margin-bottom: -20px;
+    }
+
     body {
         font-size: 12px;
+        overflow: auto;
+    }
+
+    main {
+        background-image: url(../imagens/background-pokemon.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
     }
 
     .pokedex {
@@ -29,7 +44,7 @@
     }
 
     .cartao-pokemon .cartao-informacoes h3 {
-        font-size: 16px;
+        font-size: 15px;
     }
     
     .listagem {
@@ -48,6 +63,78 @@
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
         margin-bottom: 0;
+        border-radius: 8px;
+    }
+
+    .listagem .pokemon span {
+        padding-right: 5px;
+    }
+}
+
+@media (min-width: 751px) and (max-width: 1023px) {
+    #pokedex-logo img{
+        height: 70px;
+        margin-top: 10px;
+        margin-bottom: -20px;
+    }
+
+    body {
+        font-size: 12px;
+        overflow: hidden;
+    }
+
+    main {
+        background-image: url(../imagens/background-pokemon.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center center;
+    }
+
+    .pokedex {
+        flex-direction: row;
+        padding: 30px 0;
+    }
+    
+    .cartao-pokemon {
+        max-width: 300px;
+    }
+
+    .cartao-pokemon .cartao-imagem {
+        width: 150px;
+        height: 150px;
+    }
+
+    .cartao-pokemon .cartao-informacoes {
+        padding: 60px 30px 30px;
+        margin-top: -50px;
+    }
+
+    .cartao-pokemon .cartao-informacoes .informacoes {
+        display: flex;
+        justify-content: space-between;
+        padding: 0;
+    }
+
+    .cartao-pokemon .cartao-informacoes h3 {
+        font-size: 15px;
+    }
+    
+    .listagem {
+        max-width: 300px;
+    }
+
+    .listagem ul {
+        display: flex;
+        gap: 8px;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .listagem .pokemon {
+        width: 140px;
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        margin-bottom: 2px;
         border-radius: 8px;
     }
 
