--- a/src/css/global.css
+++ b/src/css/global.css
@@ -9,7 +9,7 @@ main {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-image: url(../imagens/background-pokemon.jpg);
+    background-image: url(../imagens/pokemonBG.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center center;
